terraform/main.tf
terraform {
  backend "s3" {
    bucket = "devops-lab-tfstate-155638725921"
    key    = "terraform.tfstate"
    region = "us-east-1"
  }

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 6.0"
    }
  }

  required_version = ">= 1.15.0"
}

provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "lab" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name        = "devops-lab-vpc"
    Environment = "lab"
    ManagedBy   = "terraform"
  }
}
